fixed .article spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -50,7 +50,7 @@ hr {
 }
 
 .article {
-  margin: 50px 0;
+  margin: 34px 0;
   line-height: 1.6;
 }
 
